--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="canonical" href="https://yeadamkim.netlify.app" />
+  <link rel="canonical" href="https://yeadamkim.netlify.app"/>
+  <link rel="canonical" href="https://main--yeadamkim.netlify.app"/>
 
   <style>
     *,
