added temp header

--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
   <title>Yeadam Kim</title>
 </head>
 <body class="container">
-  <h1 class="item">Website under construction...</h1>
+  <h1 class="item">Hello, my name is Yeadam Kim!</h1>
 </body>
 </html>
