added GSC verification

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="canonical" href="https://yeadamkim.netlify.app"/>
   <link rel="canonical" href="https://main--yeadamkim.netlify.app"/>
+  <meta name="google-site-verification" content="JsbkfNl-IvBQi6tZLX1Jgt0njq5LOnTfweFzRQbCnIA" />
 
   <style>
     *,
