--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <title>Yeadam Kim</title>
 </head>
 <body class="container">
+  <noscript>You need to enable JavaScript to run this app.</noscript>
   <h1 class="item">Hello, my name is Yeadam&nbsp;Kim!</h1>
 </body>
 </html>
